# nfa_to_dfa_translator_and_plotter

./: README.md
afn-to-afd-translator/: .gitignore  README.md  pyproject.toml
afn-to-afd-translator/docs/site/: index.html  nfa_plotter.html  search.js
afn-to-afd-translator/docs/site/nfa_plotter/: algorithms.html  domain.html  gui.html  main.html  regex.html  visualization.html
afn-to-afd-translator/src/nfa_plotter/: Makefile  __main__.py  main.py
afn-to-afd-translator/src/nfa_plotter/algorithms/: __init__.py  epsilon_closure.py  move.py  reachability.py  subset_construction.py
afn-to-afd-translator/src/nfa_plotter/domain/: __init__.py  automaton.py  dfa.py  nfa.py  state.py  transition.py
afn-to-afd-translator/src/nfa_plotter/gui/: __init__.py  main_window.py
afn-to-afd-translator/src/nfa_plotter/regex/: __init__.py  normalization.py  parser.py  thompson.py  validation.py
afn-to-afd-translator/src/nfa_plotter/visualization/: __init__.py  renderer.py  subset_table.py
afn-to-afd-translator/tests/: test_reachability.py  test_regex_pipeline.py  test_subset_construction.py  test_subset_construction_extra.py  test_thompson.py
documentation/diagrams/: code.md
documentation/solution_design_document/: cs3_nfa_plotter.tex
